@@ -197,7 +197,7 @@ function AddDataToUtilityChart(data,chart,switchtype)
 					chart.addSeries({
 					  id: 'usage1',
 					  name: 'Usage_1',
-					  color: 'rgba(3,190,252,0.8)',
+					  color: 'rgba(60,130,252,0.8)',
 					  stack: 'susage',
 					  yAxis: 0
 					});
@@ -218,7 +218,7 @@ function AddDataToUtilityChart(data,chart,switchtype)
 				chart.addSeries({
 				  id: 'usage2',
 				  name: 'Usage_2',
-				  color: 'rgba(60,130,252,0.8)',
+				  color: 'rgba(3,190,252,0.8)',
 				  stack: 'susage',
 				  yAxis: 0
 				});
@@ -230,7 +230,7 @@ function AddDataToUtilityChart(data,chart,switchtype)
 					chart.addSeries({
 						id: 'return1',
 						name: 'Return_1',
-						color: 'rgba(3,252,190,0.8)',
+						color: 'rgba(30,242,110,0.8)',
 						stack: 'sreturn',
 						yAxis: 0
 					});
@@ -241,7 +241,7 @@ function AddDataToUtilityChart(data,chart,switchtype)
 					chart.addSeries({
 						id: 'return2',
 						name: 'Return_2',
-						color: 'rgba(30,242,110,0.8)',
+						color: 'rgba(3,252,190,0.8)',
 						stack: 'sreturn',
 						yAxis: 0
 					});
